--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-android-extensions'
 
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
     buildToolsVersion "30.0.3"
     buildFeatures {
         viewBinding = true
@@ -14,11 +14,15 @@ android {
     defaultConfig {
         applicationId "com.john.kot"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "acom.john.kot.CustomTestRunner"
+        testInstrumentationRunner "com.john.kot.CustomTestRunner"
     }
+    testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -36,9 +40,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    implementation 'androidx.preference:preference:1.2.0'
+
 
     // For Robolectric tests.
     testImplementation("com.google.dagger:hilt-android-testing:2.44")
@@ -46,7 +48,6 @@ dependencies {
     kaptTest("com.google.dagger:hilt-android-compiler:2.44")
     // ...with Java.
     testAnnotationProcessor("com.google.dagger:hilt-android-compiler:2.44")
-
 
     // For instrumented tests.
     androidTestImplementation("com.google.dagger:hilt-android-testing:2.44")
@@ -61,7 +62,6 @@ dependencies {
     androidTestImplementation "androidx.test:core:1.5.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 
-
     //mockk
     testImplementation "io.mockk:mockk:1.12.2"
     androidTestImplementation "io.mockk:mockk-android:1.12.0"
@@ -70,8 +70,8 @@ dependencies {
     testImplementation "org.robolectric:robolectric:4.9"
     testImplementation 'org.hamcrest:hamcrest:2.2'
 
+
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
 
 //    implementation 'com.google.android.material:material:1.6.1'
@@ -80,11 +80,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
 
     implementation project(path: ':androidUtil')
-//    api("com.android:util:1.1.1")
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
-//    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.3.1'
-//    implementation 'com.permissionx.guolindev:permissionx:1.3.0'
 
     //hilt
     implementation "com.google.dagger:hilt-android:2.42"
@@ -92,6 +89,10 @@ dependencies {
 
     implementation 'com.airbnb.android:lottie:3.4.0'
     implementation 'com.google.android.material:material:1.6.1'
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.preference:preference:1.2.0'
 
 
 }
