--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,15 +28,6 @@
         <activity
             android:name=".arch.recyclerview.multitype.visit.RecycleVisitActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".fragment.FragmentTestActivity"
-            android:exported="true">
 
         </activity>
         <activity
@@ -169,6 +160,15 @@
         </provider>
 
         <activity android:name=".activity.activityresult.SecondResultActivity" />
+        <activity
+            android:name=".arch.recyclerview.multitype.kuriovt.second.RecycleVisitSecondActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
