--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -162,6 +162,9 @@
         <activity android:name=".activity.activityresult.SecondResultActivity" />
         <activity
             android:name=".arch.recyclerview.multitype.kuriovt.second.RecycleVisitSecondActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".arch.recyclerview.multitype.kuriovt.third.RecycleVisitThirdActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
