--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/HomeTheme">
         <activity
-            android:name=".arch.recyclerview.multitype.visit.RecycleVisitActivity"
+            android:name=".ui.KeyBordActivity"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+        <activity
+            android:name=".arch.recyclerview.multitype.visit.RecycleVisitActivity"
+            android:exported="true"></activity>
         <activity
             android:name=".hilt.dn.HiltSecondActivity"
             android:exported="false" />
@@ -60,7 +67,7 @@
             android:name=".activity.ActivityC"
             android:exported="true"
             android:launchMode="singleTask" />
-        <activity android:name=".tool.GoogleTopUpActivity"></activity>
+        <activity android:name=".tool.GoogleTopUpActivity" />
         <activity
             android:name=".ui.image.XfermodesActivity"
             android:exported="true" />
@@ -128,13 +135,11 @@
         <activity android:name=".anim.MoveViewActivity" />
         <activity android:name=".anim.PropertyAnimActivity" />
         <activity android:name=".ui.ResultBleActivity" />
-        <activity android:name="com.john.kot.ui.skin.SkinStaticThemeActivity" />
         <activity android:name=".ui.GradientActivity" />
         <activity android:name=".ui.MeasureLearnActivity" />
         <activity android:name=".ui.CircleProgressActivity" />
         <activity android:name=".ui.constraint.ConstraintPlaceholderActivity" />
         <activity android:name=".ui.constraint.Constraint1Activity" />
-        <activity android:name="com.john.kot.ui.elec.ElecActivity" />
         <activity android:name=".arch.recyclerview.MainActivityApp" />
         <activity android:name=".ui.ScrollPickerActivity" />
         <activity android:name=".anim.ViewAnimActivity" />
@@ -144,7 +149,9 @@
         <activity android:name=".hilt.me.HiltSecondActivity" />
         <activity
             android:name=".activity.activityresult.FirstResultActivity"
-            android:exported="true"></activity>
+            android:exported="true">
+
+        </activity>
 
         <provider
             android:name=".CameraProvider"
@@ -162,16 +169,10 @@
         <activity android:name=".activity.activityresult.SecondResultActivity" />
         <activity
             android:name=".arch.recyclerview.multitype.kuriovt.second.RecycleVisitSecondActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".arch.recyclerview.multitype.kuriovt.third.RecycleVisitThirdActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
