--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,11 @@ apply from: "config.gradle"
 
 buildscript {
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/public' }
+
+        maven { url 'https://maven.aliyun.com/repository/google' }
+
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
         google()
         mavenCentral()
     }
@@ -15,10 +20,16 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/public' }
+
+        maven { url 'https://maven.aliyun.com/repository/google' }
+
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
         maven { url "https://jitpack.io" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+        google()
+        mavenCentral()
+
     }
 }
 
