--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/HomeTheme">
         <activity
+            android:name="com.compose.ComposeActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.KeyBordActivity"
             android:exported="true">
             <intent-filter>
@@ -36,7 +45,7 @@
         </activity>
         <activity
             android:name=".arch.recyclerview.multitype.visit.RecycleVisitActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".hilt.dn.HiltSecondActivity"
             android:exported="false" />
@@ -102,14 +111,14 @@
         <activity android:name=".viewgroup.ViewGroupActivity" />
         <activity android:name=".tool.glide.lifecycle.GlideActivity" />
         <activity android:name=".mvvm.lifecycle.LifeCycleActivity" />
-        <activity android:name="com.kot.mvvm.livedata.xiangxue.LiveData2Activity" />
-        <activity android:name="com.kot.mvvm.livedata.xiangxue.LiveData1Activity" />
+        <activity android:name=".mvvm.livedata.xiangxue.LiveData2Activity" />
+        <activity android:name=".mvvm.livedata.xiangxue.LiveData1Activity" />
         <activity android:name=".mvvm.dongnao.viewmodel.ViewModelShareActivity" />
-        <activity android:name="com.kot.mvvm.dongnao.lifecycle.Step2Activity" />
-        <activity android:name="com.kot.tool.rx.WriteRxjavaActivity" />
-        <activity android:name="com.kot.net.OkhtttpActivity" />
+        <activity android:name=".mvvm.dongnao.lifecycle.Step2Activity" />
+        <activity android:name=".tool.rx.WriteRxjavaActivity" />
+        <activity android:name=".net.OkhtttpActivity" />
         <activity android:name=".permission.PemissionxUseActivity" />
-        <activity android:name="com.kot.tool.audio.AudioRecordActivity" />
+        <activity android:name=".tool.audio.AudioRecordActivity" />
         <activity android:name=".tool.rx.RxJavaActivity" />
         <activity android:name=".tool.SharedPreferencesActivity" />
         <activity android:name=".ui.scroll.ScrollViewActivity" />
@@ -121,15 +130,15 @@
         <activity android:name=".ui.viewpager.ScreenSlidePagerActivity" />
         <activity android:name=".ui.custom.CustomViewActivity" />
         <activity android:name=".mvvm.viewmodel.ViewModelActivity" />
-        <activity android:name="com.kot.tool.time.TextClockActivity" />
-        <activity android:name="com.kot.tool.screenshot.ScreenShortActivity" />
-        <activity android:name="com.kot.permission.PermissionActivity" />
+        <activity android:name=".tool.time.TextClockActivity" />
+        <activity android:name=".tool.screenshot.ScreenShortActivity" />
+        <activity android:name=".permission.PermissionActivity" />
         <activity
             android:name=".tool.location.GpsActivity"
             android:exported="true"
             android:launchMode="singleTop" />
         <activity android:name=".tool.image.ImageHandleActivity" />
-        <activity android:name="com.kot.tool.image.ScreenPhotoActivity" />
+        <activity android:name=".tool.image.ScreenPhotoActivity" />
         <activity android:name=".tool.image.PhotoBasicsActivity" />
         <activity android:name=".anim.TextViewBigActivity" />
         <activity android:name=".anim.MoveViewActivity" />
@@ -149,12 +158,10 @@
         <activity android:name=".hilt.me.HiltSecondActivity" />
         <activity
             android:name=".activity.activityresult.FirstResultActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
 
         <provider
-            android:name="com.kot.CameraProvider"
+            android:name=".CameraProvider"
             android:authorities="${applicationId}.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
@@ -172,7 +179,7 @@
             android:exported="true" />
         <activity
             android:name=".arch.recyclerview.multitype.kuriovt.third.RecycleVisitThirdActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
