--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
     <uses-permission android:name="android.permission.INTERNET" /> <!-- 悬浮窗权限 -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> <!-- request for DANGEROUS_PERM permission to this application -->
     <uses-permission android:name="com.example.dangerousactivity.MY_DANG_PERM" />
+    <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
 
     <application
         android:name=".MyApp"
@@ -36,7 +37,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.compose.AndroidCompose03"
+            android:name=".compose.AndroidCompose03"
             android:exported="true">
 
         </activity>
@@ -48,7 +49,9 @@
             android:exported="true" />
         <activity
             android:name=".hilt.dn.HiltSecondActivity"
-            android:exported="false" />
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".link.DeepLinkActivity"
             android:exported="true">
