--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
         android:theme="@style/HomeTheme">
         <activity
             android:name=".tool.shake.ShakeActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".tool.shake.ShakeMeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
