--- a/Mine/src/main/AndroidManifest.xml
+++ b/Mine/src/main/AndroidManifest.xml
@@ -138,7 +138,15 @@
             android:screenOrientation="portrait" />
         <activity android:name=".MainActivity" />
         <activity android:name=".openlib.rxretrofit.renyugang.RxJavaRenActivity" />
-        <activity android:name=".dialog.DialogActivity" />
+        <activity
+            android:name=".dialog.DialogActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".storage.StorageActivity" />
         <activity android:name=".component.broadcastservice.BroadcastReceiverActivity" />
         <activity android:name=".ui.recycleview.ListViewActivity" />
@@ -153,10 +161,7 @@
         <activity
             android:name=".component.fragment.life.LifeActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
         <activity android:name=".openlib.glide.GlideActivity" />
         <activity android:name=".ui.viewstub.ViewStubActivity" />
