--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,11 @@
     <uses-permission android:name="android.permission.INTERNET" /> <!-- 悬浮窗权限 -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> <!-- request for DANGEROUS_PERM permission to this application -->
     <uses-permission android:name="com.example.dangerousactivity.MY_DANG_PERM" />
-    <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
+    <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" /> <!-- 前台服务 -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="Manifest.permission.CAMERA" />
 
     <application
         android:name=".MyApp"
@@ -27,35 +31,38 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/HomeTheme">
+        <activity
+            android:name=".permission.NotificationPermissionActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".permission.JetpackPermissionActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".service.ForegroundActivity"
+            android:exported="true"></activity>
         <activity
             android:name=".tool.shake.ShakeMeActivity"
-            android:exported="true">
-
-        </activity>
-
+            android:exported="true" />
         <activity
             android:name=".tool.shake.ShakeActivity"
-            android:exported="true">
-
-        </activity>
-
-        <activity
-            android:name=".compose.AndroidCompose03"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".ui.KeyBordActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".arch.recyclerview.multitype.visit.RecycleVisitActivity"
             android:exported="true" />
         <activity
             android:name=".hilt.dn.HiltSecondActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".link.DeepLinkActivity"
             android:exported="true">
@@ -74,7 +81,7 @@
         </activity>
         <activity
             android:name=".hilt.dn.HiltMainActivity"
-            android:exported="true" />
+            android:exported="true"></activity>
         <activity
             android:name=".activity.ActivityD"
             android:exported="true"
@@ -103,18 +110,8 @@
             android:name=".coroutine.CoroutinesActivity"
             android:exported="true" />
         <activity
-            android:name=".ui.fragment.TabFragmentActivity"
-            android:label="@string/title_activity_tab_fragment"
-            android:theme="@style/HomeTheme.NoActionBar" />
-        <activity
             android:name=".anim.LottieAnimActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true" />
         <activity android:name=".test.ui.EspressoActivity" />
         <activity android:name=".ColorIntActivity" />
         <activity android:name=".ui.dialog.DialogStateBarActivity" />
@@ -170,14 +167,12 @@
         <activity android:name=".ui.MessageActivityFragment" />
         <activity
             android:name=".mvvm.scrap.StrapCheckActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
         <activity android:name=".hilt.me.HiltActivity" />
         <activity android:name=".hilt.me.HiltSecondActivity" />
         <activity
             android:name=".activity.activityresult.FirstResultActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
 
         <provider
             android:name=".CameraProvider"
@@ -199,6 +194,10 @@
         <activity
             android:name=".arch.recyclerview.multitype.kuriovt.third.RecycleVisitThirdActivity"
             android:exported="true" />
+
+        <receiver android:name=".service.DeviceBroadcastReceiver" />
+
+        <service android:name=".service.DeviceService" />
     </application>
 
 </manifest>
