--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,6 @@
     <uses-permission android:name="com.example.dangerousactivity.MY_DANG_PERM" />
     <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" /> <!-- 前台服务 -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="Manifest.permission.CAMERA" />
 
@@ -32,7 +31,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/HomeTheme">
         <activity
-            android:name=".permission.NotificationPermissionActivity"
+            android:name=".permission.PhotoVideoPermissionActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,13 +40,20 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".permission.NotificationPermissionActivity"
+            android:exported="true"></activity>
+        <activity
             android:name=".permission.JetpackPermissionActivity"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".service.ForegroundActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".tool.shake.ShakeMeActivity"
             android:exported="true" />
@@ -81,7 +87,7 @@
         </activity>
         <activity
             android:name=".hilt.dn.HiltMainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".activity.ActivityD"
             android:exported="true"
