--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -168,6 +168,9 @@
         </activity>
         <activity
             android:name=".tool.image.PhotoBasicsActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".tool.image.PickerImagesActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
