--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,8 +51,7 @@
         </activity>
         <activity
             android:name=".permission.NotificationPermissionActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".permission.JetpackPermissionActivity"
             android:exported="true"></activity>
@@ -163,20 +162,20 @@
         <activity android:name=".tool.image.ImageHandleActivity" />
         <activity
             android:name=".tool.image.ScreenPhotoActivity"
-            android:exported="true">
-
-        </activity>
-        <activity
-            android:name=".tool.image.PhotoBasicsActivity"
             android:exported="true"></activity>
         <activity
-            android:name=".tool.image.PickerImagesActivity"
+            android:name=".tool.image.PhotoBasicsActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".tool.image.PickerImagesActivity"
+            android:exported="true">
+
         </activity>
         <activity android:name=".anim.TextViewBigActivity" />
         <activity android:name=".anim.MoveViewActivity" />
