--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/HomeTheme">
         <activity
-            android:name=".ui.ProgressBarActivity"
+            android:name=".hilt.HiltEntryActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,6 +46,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.ProgressBarActivity"
+            android:exported="true"></activity>
         <activity
             android:name=".permission.PhotoVideoPermissionActivity"
             android:exported="true" />
@@ -165,7 +168,7 @@
             android:exported="true" />
         <activity
             android:name=".tool.image.PhotoBasicsActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".tool.image.PickerImagesActivity"
             android:exported="true" />
