--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/HomeTheme">
         <activity
-            android:name=".hilt.HiltEntryActivity"
+            android:name=".ui.image.RingCircleImageActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,8 +47,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.ProgressBarActivity"
+            android:name=".hilt.HiltEntryActivity"
             android:exported="true"></activity>
+        <activity
+            android:name=".ui.ProgressBarActivity"
+            android:exported="true" />
         <activity
             android:name=".permission.PhotoVideoPermissionActivity"
             android:exported="true" />
