--- a/Mine/src/main/AndroidManifest.xml
+++ b/Mine/src/main/AndroidManifest.xml
@@ -144,14 +144,18 @@
 
         </activity>
 
-        <activity android:name=".storage.StorageActivity" />
         <activity
-            android:name=".component.broadcastservice.BroadcastReceiverActivity"
+            android:name=".storage.StorageActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".component.broadcastservice.BroadcastReceiverActivity"
+            android:exported="true">
+
         </activity>
         <activity android:name=".ui.recycleview.ListViewActivity" />
         <activity android:name=".anim.AnimUseActivity" />
