--- a/Mine/build.gradle
+++ b/Mine/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     androidTestImplementation 'com.google.truth:truth:' + rootProject.truthVersion
     androidTestImplementation 'org.robolectric:annotations:' + rootProject.robolectricVersion
     implementation project(path: ':androidUtil')
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 
 
     testImplementation 'androidx.test.ext:junit:1.1.5'
