--- a/Mine/src/main/AndroidManifest.xml
+++ b/Mine/src/main/AndroidManifest.xml
@@ -146,6 +146,10 @@
 
         <activity
             android:name=".storage.StorageActivity"
+            android:exported="true"></activity>
+
+        <activity
+            android:name=".storage.NewPhotoPicker"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
